services/muwazana.com/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: muwazana-com
spec:
  selector:
    app: muwazana-com
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
