services/muwazana.com/k8s/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: muwazana-com
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: muwazana.com
      http:
        paths:
          - backend:
              serviceName: muwazana-com
              servicePort: 80
    - host: www.muwazana.com
      http:
        paths:
          - backend:
              serviceName: muwazana-com
              servicePort: 80
